# logbook

./: .gitignore  AGENTS.md  README.md
backend/: .dockerignore  .env.example  .env.test  .ruff.toml  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b5fe33c8c1e_init.py  7b4b9cdb4a4e_add_published_at_to_articles.py  e1f2f726ab4a_initial_schema.py
backend/app/: main.py
backend/app/api/: articles.py  auth.py  categories.py  health.py  tags.py  uploads.py
backend/app/core/: exceptions.py  normalization.py  response.py  security.py  settings.py  slug.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  admin_user.py  admin_users.py  article.py  article_tag.py  article_tags.py  articles.py  categories.py  category.py  tag.py  tags.py
backend/app/schemas/: __init__.py  admin_user.py  article.py  article_query.py  auth.py  base.py  category.py  error.py  health.py  tag.py  upload.py
backend/app/services/: articles.py  uploads.py
backend/scripts/: check_settings.py  delete_seed_articles.py  seed.py
backend/tests/: conftest.py
backend/tests/api/: __init__.py  test_articles_api.py  test_articles_auth_api.py  test_articles_crud_api.py  test_cors.py  test_health.py  test_tags_categories_api.py  test_uploads_api.py
backend/tests/core/: test_exceptions.py  test_security.py  test_settings.py
backend/tests/models/: test_article_db.py  test_article_tag_db.py  test_tag_db.py
backend/tests/services/: test_articles_service.py  test_uploads_service.py
backend/tests_legacy/: conftest.py
docs/: 04_url_design.md  (+10 more)
(+145 files in other folders)
