[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.122.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.9.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests_legacy"
